<resources>
    <string name="app_name">Inventario</string>
    <string name="email">&#160;&#160;Email</string>
    <string name="contraseña">&#160;&#160;Contraseña</string>
    <string name="nombre">&#160;Nombre</string>
    <string name="email2">&#160;Email</string>
    <string name="contraseña2">&#160;Contraseña</string>
    <string name="confContraseña">&#160;Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="recuperarPass">¿Has olvidado la contraseña?</string>
    <string name="title_activity_settings">Settings</string>


</resources>
