<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Registro"
android:orientation="vertical">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="120dp">

    <EditText
        android:id="@+id/displayName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/bordes"
        android:hint="@string/nombre"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/bordes"
        android:hint="@string/email2"
        android:paddingLeft="2dp"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/cumple"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/bordes"
            android:onClick="setDate"
            android:layout_margin="15dp"
            android:paddingLeft="8dp"
            android:hint="Fecha"
            android:paddingTop="15dp"
            android:textSize="17sp"
            android:textColor="@android:color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/bordes"
            android:hint="@string/contraseña2"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/password2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/bordes"
            android:hint="@string/confContraseña"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/registrarse"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#00cc99"
            android:text="@string/registrarse"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Ya se ha registrado? ¡Entre!"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</LinearLayout>