<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jcasco.apps.inventario.MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/google"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:text="INICIAR SESIÓN CON GOOGLE"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="15dp"
            android:background="@drawable/bordes"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input_layout"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/constraseña"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/bordes"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/entra"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:text="ENTRA"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/contraPerdida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            style="@style/AppTheme"
            android:onClick="recuperarContraseña"
            android:text="@string/recuperarPass" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/registrarte"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:text="Registrarse"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>

</LinearLayout>